# openpulse

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.server.yml  docker-compose.yml  pyproject.toml
docs/: agent-integration.md
examples/: hermes-config.yaml  openclaw-config.json
projects/amit-shah-monitor/: daily_report.py
projects/amit-shah-monitor/reports/: .reported_ids.json  amit-shah-report-2026-06-17.md
src/openpulse/: __init__.py  config.py  main.py  mcp_server.py
src/openpulse/analyzer/: __init__.py  keyword_extractor.py
src/openpulse/api/cli/: main.py
src/openpulse/api/mcp/: server.py
src/openpulse/api/rest/: __init__.py  articles.py  sources.py  system.py  tasks.py  watchlists.py
src/openpulse/collector/: __init__.py  base.py  converter.py  dedup.py  parser.py
src/openpulse/collector/adapters/: __init__.py  custom_rss.py  rsshub.py
src/openpulse/scheduler/: engine.py  jobs.py
src/openpulse/storage/: __init__.py  database.py  models.py
src/openpulse/storage/repositories/: __init__.py  article_repo.py  source_repo.py  task_repo.py
tests/test_collector/: __init__.py  test_base.py  test_dedup.py  test_parser.py
tests/test_scheduler/: __init__.py
tests/test_storage/: test_models.py
