[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpulse"
version = "0.1.0"
description = "A lightweight, cross-platform, Agent-Native open-source intelligence gathering and aggregation platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "OpenPulse Contributors" }
]
keywords = ["osint", "news", "rss", "aggregation", "mcp", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "openpulse[postgres,llm,dev]",
]

[project.scripts]
openpulse = "openpulse.api.cli.main:app"

[project.urls]
Homepage = "https://github.com/openpulse/openpulse"
Documentation = "https://openpulse.readthedocs.io"
Repository = "https://github.com/openpulse/openpulse"
Issues = "https://github.com/openpulse/openpulse/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openpulse"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
